# yo-slack-adapter

./: .gitignore  LICENSE  stack.yaml  yo-slack-adapter.cabal
app/: Main.hs
src/: Lib.hs
src/Web/: Yo.hs  YoSlackAdapter.hs
src/Web/Slack/: IncomingWebhook.hs
src/Web/Slack/IncomingWebhook/: Attachment.hs  Message.hs
src/Web/Yo/: Query.hs
src/Web/YoSlackAdapter/: ReverseGeocode.hs
