name:                yo-slack-adapter
version:             0.1.0.0
synopsis:            Send notifications to Slack when receiving Yo's
description:         Please see README.md
homepage:            http://github.com/githubuser/yo-slack-adapter
license:             BSD3
license-file:        LICENSE
author:              Ryota Kameoka
maintainer:          kameoka.ryota@gmail.com
copyright:           2015 Ryota Kameoka
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Web.Yo.Query
                     , Web.YoSlackAdapter
                     , Web.Slack.IncomingWebhook
                     , Web.Slack.IncomingWebhook.Attachment
                     , Web.Slack.IncomingWebhook.Message
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-casing
                     , bytestring
                     , http-conduit
                     , network
  default-language:    Haskell2010

executable yo-slack-adapter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yo-slack-adapter
                     , aeson
                     , bytestring
                     , scotty
  default-language:    Haskell2010

test-suite yo-slack-adapter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , yo-slack-adapter
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ryota-ka/yo-slack-adapter
